updated Mocking in unit testing to mock OAuth2 flow