@@ -2,31 +2,49 @@ package com.study.resttemplatetest.client;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.study.resttemplatetest.config.OAuthClientInterceptor;
 import com.study.resttemplatetest.config.RestTemplateBuilderConfig;
 import com.study.resttemplatetest.model.BeerDto;
 import com.study.resttemplatetest.model.BeerDtoPage;
+import com.study.resttemplatetest.model.BeerDtoPagedModel;
 import com.study.resttemplatetest.model.BeerStyle;
-import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.client.RestClientTest;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
+import org.springframework.security.oauth2.client.InMemoryOAuth2AuthorizedClientService;
+import org.springframework.security.oauth2.client.OAuth2AuthorizedClient;
+import org.springframework.security.oauth2.client.OAuth2AuthorizedClientManager;
+import org.springframework.security.oauth2.client.OAuth2AuthorizedClientService;
+import org.springframework.security.oauth2.client.registration.ClientRegistration;
+import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
+import org.springframework.security.oauth2.client.registration.InMemoryClientRegistrationRepository;
+import org.springframework.security.oauth2.core.AuthorizationGrantType;
+import org.springframework.security.oauth2.core.OAuth2AccessToken;
 import org.springframework.test.web.client.MockRestServiceServer;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.math.BigDecimal;
-import java.util.Collections;
+import java.time.Instant;
+import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 import static com.study.resttemplatetest.client.BeerClientImpl.BEER_ID_PATH;
 import static com.study.resttemplatetest.client.BeerClientImpl.BEER_PATH;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
+import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.header;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.method;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.queryParam;
@@ -40,9 +58,11 @@ import static org.springframework.test.web.client.response.MockRestResponseCreat
 
 @RestClientTest(BeerClientImpl.class)
 @Import(RestTemplateBuilderConfig.class)
-public class BeerClientMockTest {
+class BeerClientMockTest {
 
     static final String URL = "http://localhost:8080";
+    static final String BEARER_TEST = "Bearer test";
+    static final String REG_ID = "auth-server";
 
     @Autowired
     BeerClient beerClient;
@@ -52,13 +72,27 @@ public class BeerClientMockTest {
     RestTemplateBuilder restTemplateBuilder;
     @Autowired
     ObjectMapper objectMapper;
+    @Autowired
+    ClientRegistrationRepository registrationRepository;
+
+    @MockBean
+    OAuth2AuthorizedClientManager authorizedClientManager;
 
     BeerDto testDto;
     UUID testDtoId;
     String testDtoJsonString;
+    ClientRegistration testRegistration;
+    OAuth2AccessToken accessToken;
 
     @BeforeEach
     void setUp() throws JsonProcessingException {
+        testRegistration = registrationRepository.findByRegistrationId(REG_ID);
+        accessToken = new OAuth2AccessToken(OAuth2AccessToken.TokenType.BEARER, "test",
+                Instant.now(), Instant.now().plusSeconds(60L));
+
+        when(authorizedClientManager.authorize(any()))
+                .thenReturn(new OAuth2AuthorizedClient(testRegistration, "test", accessToken));
+
         testDto = getBeerDto();
         testDtoId = testDto.getId();
         testDtoJsonString = objectMapper.writeValueAsString(testDto);
@@ -66,22 +100,23 @@ public class BeerClientMockTest {
 
     @Test
     void testGetAllBeers() throws JsonProcessingException {
-        var response = objectMapper.writeValueAsString(getPage());
+        var response = objectMapper.writeValueAsString(getPagedModel());
 
-        mockRestServiceServer.expect(method(HttpMethod.GET))
-                .andExpect(header("Authorization", Matchers.any(String.class)))
+        mockRestServiceServer.expect(
+                        method(HttpMethod.GET))
+                .andExpect(header(AUTHORIZATION, BEARER_TEST))
                 .andExpect(requestTo(URL + BEER_PATH))
                 .andRespond(withSuccess(response, MediaType.APPLICATION_JSON));
 
         var dtosPage = beerClient.getAllBeers();
-        assertThat(dtosPage.getContent().size()).isGreaterThan(0);
+        assertThat(dtosPage.getContent()).isNotEmpty();
 
         mockRestServiceServer.verify();
     }
 
     @Test
     void testGetAllBeersWithQueryParam() throws JsonProcessingException {
-        var response = objectMapper.writeValueAsString(getPage());
+        var response = objectMapper.writeValueAsString(getPagedModel());
         String queryName = "beerName";
         String queryValue = "ALE";
 
@@ -89,14 +124,16 @@ public class BeerClientMockTest {
                 .queryParam(queryName, queryValue)
                 .build().toUri();
 
-        mockRestServiceServer.expect(method(HttpMethod.GET))
+        mockRestServiceServer.expect(
+                        method(HttpMethod.GET))
+                .andExpect(header(AUTHORIZATION, BEARER_TEST))
                 .andExpect(requestTo(uri))
                 .andExpect(queryParam(queryName, queryValue))
                 .andRespond(withSuccess(response, MediaType.APPLICATION_JSON));
 
         var responsePage = beerClient.getAllBeers(queryValue);
 
-        assertThat(responsePage.getContent().size()).isGreaterThan(0);
+        assertThat(responsePage.getContent()).isNotEmpty();
 
         mockRestServiceServer.verify();
     }
@@ -115,7 +152,9 @@ public class BeerClientMockTest {
     void testCreateBeer() {
         var uri = UriComponentsBuilder.fromPath(BEER_ID_PATH).build(testDtoId);
 
-        mockRestServiceServer.expect(method(HttpMethod.POST))
+        mockRestServiceServer.expect(
+                        method(HttpMethod.POST))
+                .andExpect(header(AUTHORIZATION, BEARER_TEST))
                 .andExpect(requestTo(URL + BEER_PATH))
                 .andRespond(withAccepted().location(uri));
 
@@ -129,7 +168,9 @@ public class BeerClientMockTest {
 
     @Test
     void testUpdateBeer() {
-        mockRestServiceServer.expect(method(HttpMethod.PUT))
+        mockRestServiceServer.expect(
+                        method(HttpMethod.PUT))
+                .andExpect(header(AUTHORIZATION, BEARER_TEST))
                 .andExpect(requestToUriTemplate(URL + BEER_ID_PATH, testDtoId))
                 .andRespond(withNoContent());
 
@@ -143,7 +184,9 @@ public class BeerClientMockTest {
 
     @Test
     void testDeleteBeer() {
-        mockRestServiceServer.expect(method(HttpMethod.DELETE))
+        mockRestServiceServer.expect(
+                        method(HttpMethod.DELETE))
+                .andExpect(header(AUTHORIZATION, BEARER_TEST))
                 .andExpect(requestToUriTemplate(URL + BEER_ID_PATH, testDtoId))
                 .andRespond(withNoContent());
 
@@ -154,7 +197,9 @@ public class BeerClientMockTest {
 
     @Test
     void testDeleteNonExistingBeer() {
-        mockRestServiceServer.expect(method(HttpMethod.DELETE))
+        mockRestServiceServer.expect(
+                        method(HttpMethod.DELETE))
+                .andExpect(header(AUTHORIZATION, BEARER_TEST))
                 .andExpect(requestToUriTemplate(URL + BEER_ID_PATH, testDtoId))
                 .andRespond(withResourceNotFound());
 
@@ -175,13 +220,46 @@ public class BeerClientMockTest {
                 .build();
     }
 
-    private BeerDtoPage getPage() {
-        return new BeerDtoPage(Collections.singletonList(getBeerDto()), 1, 25, 1);
+    private BeerDtoPagedModel getPagedModel() {
+        return new BeerDtoPagedModel(
+                new BeerDtoPage(
+                        List.of(getBeerDto()),
+                        Map.of(
+                                "number", 1,
+                                "size", 25,
+                                "totalElements", 1
+                        )));
     }
 
     private void mockGetByIdRequest() {
-        mockRestServiceServer.expect(method(HttpMethod.GET))
+        mockRestServiceServer.expect(
+                        method(HttpMethod.GET))
+                .andExpect(header(AUTHORIZATION, BEARER_TEST))
                 .andExpect(requestToUriTemplate(URL + BEER_ID_PATH, testDtoId))
                 .andRespond(withSuccess(testDtoJsonString, MediaType.APPLICATION_JSON));
+    }
+
+    @TestConfiguration
+    public static class TestConfig {
+        @Bean
+        ClientRegistrationRepository clientRegistrationRepository() {
+            return new InMemoryClientRegistrationRepository(ClientRegistration
+                    .withRegistrationId(REG_ID)
+                    .authorizationGrantType(AuthorizationGrantType.CLIENT_CREDENTIALS)
+                    .clientId("test")
+                    .tokenUri("test")
+                    .build());
+        }
+
+        @Bean
+        OAuth2AuthorizedClientService authorizedClientService(ClientRegistrationRepository clientRegistrationRepository) {
+            return new InMemoryOAuth2AuthorizedClientService(clientRegistrationRepository);
+        }
+
+        @Bean
+        OAuthClientInterceptor oauthClientInterceptor(OAuth2AuthorizedClientManager authorizedClientManager,
+                                                      ClientRegistrationRepository clientRegistrationRepository) {
+            return new OAuthClientInterceptor(authorizedClientManager, clientRegistrationRepository);
+        }
     }
 }
